c4prj2_input/grade.txt
Grading at Sun Aug  9 09:43:45 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c:9:1: error: ISO C forbids forward parameter declarations [-Werror=pedantic]
 void add_future_card(future_cards_t *fc, size_t index; card_t *ptr) {
 ^
future.c:9:49: error: parameter ‘index’ has just a forward declaration
 void add_future_card(future_cards_t *fc, size_t index; card_t *ptr) {
                                                 ^
future.c:9:38: error: parameter ‘fc’ has just a forward declaration
 void add_future_card(future_cards_t *fc, size_t index; card_t *ptr) {
                                      ^
future.c:9:6: error: conflicting types for ‘add_future_card’
 void add_future_card(future_cards_t *fc, size_t index; card_t *ptr) {
      ^
In file included from future.c:7:0:
future.h:11:6: note: previous declaration of ‘add_future_card’ was here
 void add_future_card(future_cards_t * fc, size_t index, card_t * ptr) ;
      ^
future.c: In function ‘add_future_card’:
future.c:10:14: error: ‘fc’ undeclared (first use in this function)
   if(index < fc->n_decks) {
              ^
future.c:10:14: note: each undeclared identifier is reported only once for each function it appears in
future.c: At top level:
future.c:28:43: error: unknown type name ‘future_card_t’
 void future_cards_from_deck(deck_t *deck, future_card_t *fc) {
                                           ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
